<?xml version="1.0"?>
<package format="2">
  <name>r12_hardware_interface</name>
  <version>1.0.0</version>
  <description>The r12_hardware_interface package</description>

  <maintainer email="ukoffice@strobotics.com">ST Robotics UK office</maintainer>

  <license>MIT</license>

  <author email="HogstrandAndreas@gmail.com">Andreas Hogstrand</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>


  <export>
  </export>
</package>
